# MORTIS

./: BUILD_SUMMARY.md  CHANGELOG.md  Cargo.toml  MORTIS.md  README.md  deny.toml
.github/workflows/: ci.yml
complete-mortis-system-implementation/: index.html  package-lock.json
complete-mortis-system-implementation/src/: App.tsx  index.css
complete-mortis-system-implementation/src/components/: Architecture.tsx  CLIReference.tsx  Dashboard.tsx  Inventory.tsx  Plans.tsx  Receipts.tsx  Runbooks.tsx  Security.tsx  SelfCheck.tsx  Sidebar.tsx  Triggers.tsx
complete-mortis-system-implementation/src/data/: mortisData.ts
crates/mortis-cli/: Cargo.toml
crates/mortis-cli/src/: main.rs
crates/mortis-core/: Cargo.toml
crates/mortis-core/src/: lib.rs  orchestrator.rs  passphrase.rs  plan.rs  scrubbing.rs  triggers.rs
crates/mortis-crypto/: Cargo.toml
crates/mortis-crypto/src/: aead.rs  hashing.rs  key_derivation.rs  lib.rs  receipt_engine.rs  rfc3161.rs  signing.rs
crates/mortis-db/: Cargo.toml
crates/mortis-db/src/: config.rs  inventory.rs  lib.rs  migrations.rs  receipts.rs  schema.rs
crates/mortis-plugins/: Cargo.toml
crates/mortis-plugins/src/: deletion.rs  lib.rs  plugin_runner.rs  sanitization.rs  traits.rs
crates/mortis-types/: Cargo.toml
crates/mortis-types/src/: asset.rs  credential.rs  error.rs  lib.rs  plan.rs  receipt.rs  trigger.rs
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  SECURITY.md
examples/: emergency_wipe.toml  full_workflow.sh
scripts/: build-reproducible.sh  generate-sbom.sh  sign-release.sh
tests/: backward_compat.rs  e2e.rs
tests/receipts/v1.0.0/: valid_receipt.json
