[package]
name = "mortis-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Cryptographic primitives for MORTIS — §7 CANONICAL"

[dependencies]
ed25519-dalek = { workspace = true }
ring = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
subtle = "2"
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

mortis-types = { path = "../mortis-types" }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
