[package]
name = "mortis-db"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Database persistence layer for MORTIS"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
hex = { workspace = true }

mortis-types = { path = "../mortis-types" }
mortis-crypto = { path = "../mortis-crypto" }

[dev-dependencies]
tempfile = { workspace = true }
