[package]
name = "mortis-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Plugin system for MORTIS — §5.2 CANONICAL"

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

mortis-types = { path = "../mortis-types" }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
