[package]
name = "mortis-types"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared types for MORTIS — zero internal dependencies"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
